--- a/QuantExtractor/QuantExtractor.csproj
+++ b/QuantExtractor/QuantExtractor.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="PdfPig" Version="0.1.8" />
       <PackageReference Include="PDFsharp" Version="6.0.0-preview-2" />
     </ItemGroup>
 
